--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html"><img src="assets/img/logo-bba.png" alt="" class="img-fluid"></a>
-        <h4 class="text-light"><a href="index.html"><span>B²it Analytics</span></a></h4>
+        <h4 class="text-light"><a href="index.html"><span><b>B²it Analytics</b></span></a></h4>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -89,7 +89,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Process digitization & document management</h1>
+          <h2 data-aos="fade-up">Process digitization & content management</h2>
           <h2 data-aos="fade-up" data-aos-delay="400">We are a team of experts in data analysis and processing </h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
