--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Vesperr Bootstrap Template - Index</title>
+  <title>BBit-Analytics Bootstrap page - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -89,8 +89,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">Process digitization & content management</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We are a team of experts in data analysis and processing </h2>
+          <h1 data-aos="fade-up">Process digitization & douments management</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">We are a team of experts in data analytics and process automation </h2>
           <div data-aos="fade-up" data-aos-delay="800">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
@@ -411,7 +411,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit eum quidem consectetur velit</p>
+          <p>Benaloga commodi suscipit eum quidem consectetur velit</p>
         </div>
 
         <div class="owl-carousel testimonials-carousel" data-aos="fade-up" data-aos-delay="200">
@@ -419,7 +419,7 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
+              <h3>Ambang gho Bena</h3>
               <h4>Ceo &amp; Founder</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -432,7 +432,7 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
+              <h3>Noor-Cella Andoun Bena</h3>
               <h4>Designer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -445,7 +445,7 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
+              <h3>Al Joe Junior Bena</h3>
               <h4>Store Owner</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -458,7 +458,7 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
+              <h3>Mee Malaika Bena</h3>
               <h4>Freelancer</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -471,7 +471,7 @@
           <div class="testimonial-wrap">
             <div class="testimonial-item">
               <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
+              <h3>Norabelle Iken Bena</h3>
               <h4>Entrepreneur</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
@@ -662,7 +662,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
+                <h4>Ambang Bena</h4>
                 <span>Chief Executive Officer</span>
               </div>
             </div>
@@ -680,7 +680,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
+                <h4>Noor-Cella Andoun Bena</h4>
                 <span>Product Manager</span>
               </div>
             </div>
@@ -698,8 +698,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Atchom Bena</h4>
+                <span>CTO & Co-Founder</span>
               </div>
             </div>
           </div>
@@ -716,7 +716,7 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
+                <h4>Hughe Kentsa</h4>
                 <span>Accountant</span>
               </div>
             </div>
@@ -877,7 +877,7 @@
 
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="contact-about">
-              <h3>Vesperr</h3>
+              <h3>B²IT Analytics</h3>
               <p>Cras fermentum odio eu feugiat. Justo eget magna fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
@@ -892,17 +892,17 @@
             <div class="info">
               <div>
                 <i class="ri-map-pin-line"></i>
-                <p>A108 Adam Street<br>New York, NY 535022</p>
+                <p>P.O.BOX 35484 Bastos, YAOUNDE, Cameroon</p>
               </div>
 
               <div>
                 <i class="ri-mail-send-line"></i>
-                <p>info@example.com</p>
+                <p>contact@bbdiagnostics.org</p>
               </div>
 
               <div>
                 <i class="ri-phone-line"></i>
-                <p>+1 5589 55488 55s</p>
+                <p>+237 671668689</p>
               </div>
 
             </div>
@@ -948,7 +948,7 @@
       <div class="row d-flex align-items-center">
         <div class="col-lg-6 text-lg-left text-center">
           <div class="copyright">
-            &copy; Copyright <strong>Vesperr</strong>. All Rights Reserved
+            &copy; Copyright <strong>B²it-Analytics</strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
