--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="zoom-in-right" data-aos-delay="200">
-              <h3>Free</h3>
+              <h3>Case Analysis Consulting</h3>
               <h4><sup>$</sup>0<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
@@ -757,7 +757,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box recommended" data-aos="zoom-in" data-aos-delay="100">
-              <h3>Business</h3>
+              <h3>Business Analysis and Solution Implementation</h3>
               <h4><sup>$</sup>19<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
@@ -774,7 +774,7 @@
 
           <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="zoom-in-left" data-aos-delay="200">
-              <h3>Developer</h3>
+              <h3>Project Accompaniement</h3>
               <h4><sup>$</sup>29<span> / month</span></h4>
               <ul>
                 <li>Aida dere</li>
